--- a/style.css
+++ b/style.css
@@ -367,8 +367,14 @@ nav .fas {
         font-size: 16px;
         margin-right: 20px;
     }
+    .btn {
+        width: 48%;
+    }
     .contact-left, .contact-right {
         flex-basis: 100%;
+    }
+    .btn.btn2 {
+        width: 55%;
     }
     .copyright {
         font-size: 14px;
