--- a/style.css
+++ b/style.css
@@ -368,13 +368,15 @@ nav .fas {
         margin-right: 20px;
     }
     .btn {
-        width: 48%;
+        width: 100%;
+        text-align: center;
     }
     .contact-left, .contact-right {
         flex-basis: 100%;
     }
     .btn.btn2 {
-        width: 55%;
+        text-align: center;
+        width: 100%;
     }
     .copyright {
         font-size: 14px;
