--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ nav {
     justify-content: space-between;
     flex-wrap: wrap;
 }
-logo {
-    width: 140px;
+.logo {
+    width: 4%;
 }
 nav ul li {
     display: inline-block;
@@ -314,13 +314,13 @@ nav .fas {
 }
 @media only screen and (max-width: 600px) {
     .logo {
-        width: 40%;
+        width: 10%;
     }
     #header {
         background-image: url(images/phone-background.png);
     }
     .header-text {
-        margin-top: 100%;
+        margin-top: 80%;
         font-size: 16px;
     }
     .header-text h1 {
