--- a/style.css
+++ b/style.css
@@ -1,392 +1,414 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
+  transition: all 0.5s;
 }
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 body {
-    background: #080808;
-    color: #fff;
+  background: #080808;
+  color: #fff;
 }
 #header {
-    width: 100%;
-    height: 100vh;
-    background-image: url(images/background.jpg);
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+  width: 100%;
+  height: 100vh;
+  background-image: url(images/background.png);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 .container {
-    padding: 10px 10%;
+  padding: 10px 10%;
 }
 nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 .logo {
-    width: 4%;
+  width: 5%;
 }
+/*.mindvoice {
+  width: 200px;
+  position: relative;
+  left: 1000px;
+  top: 60px;
+}*/
 nav ul li {
-    display: inline-block;
-    list-style: none;
-    margin: 10px 20px;
+  display: inline-block;
+  list-style: none;
+  margin: 10px 20px;
 }
 nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 18px;
-    position: relative;
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  position: relative;
 }
 nav ul li a::after {
-    content: '';
-    width: 0;
-    height: 3px;
-    background: #03dac5;
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    transition: 0.5s;
+  content: "";
+  width: 0;
+  height: 3px;
+  background: #2b8fbf;
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  transition: 0.5s;
 }
 nav ul li a:hover::after {
-    width: 100%;
+  width: 100%;
 }
 .header-text {
-    margin-top: 20%;
-    font-size: 30px;
+  margin-top: 20%;
+  font-size: 30px;
 }
 .header-text h1 {
-    margin-top: 20px;
-    font-size: 60px;
+  margin-top: 20px;
+  font-size: 60px;
 }
 .header-text h1 span {
-    color: #03dac5;
+  color: #2b8fbf;
 }
 /* --------------------------about------------------------------- */
 #about {
-    padding: 80px 0;
-    color: #ababab;
+  padding: 80px 0;
+  color: #ababab;
 }
 .row {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 .about-col-1 {
-    flex-basis: 35%;
+  flex-basis: 35%;
 }
 .about-col-1 img {
-    width: 100%;
-    border-radius: 15px;
+  width: 100%;
+  border-radius: 15px;
 }
 .about-col-2 {
-    flex-basis: 60%;
+  flex-basis: 60%;
+}
+.about-col-2 p {
+  margin-top: 20px;
+  line-height: 1.5;
 }
 .sub-title {
-    font-size: 60px;
-    font-weight: 600;
-    color: #fff;
+  font-size: 60px;
+  font-weight: 600;
+  color: #fff;
 }
 .tab-titles {
-    display: flex;
-    margin: 20px 0 40px;
+  display: flex;
+  margin: 20px 0 40px;
 }
 .tab-links {
-    margin-right: 50px;
-    font-size: 18px;
-    font-weight: 500;
-    cursor: pointer;
-    position: relative;
+  margin-right: 50px;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  position: relative;
 }
 .tab-links::after {
-    content: '';
-    width: 0;
-    height: 3px;
-    background: #03dac5;
-    position: absolute;
-    left: 0;
-    bottom: -8px;
-    transition: 0.5s;
+  content: "";
+  width: 0;
+  height: 3px;
+  background: #2b8fbf;
+  position: absolute;
+  left: 0;
+  bottom: -8px;
+  transition: 0.5s;
 }
 .tab-links.active-link::after {
-    width: 50%;
+  width: 50%;
 }
 .tab-contents ul li {
-    list-style: none;
-    margin: 10px 0;
+  list-style: none;
+  margin: 10px 0;
 }
 .tab-contents ul li span {
-    color: #03dac8;
-    font-size: 14px;
+  color: #459cc7;
+  font-size: 14px;
 }
 .tab-contents {
-    display: none;
+  display: none;
 }
 .tab-contents.active-tab {
-    display: block;
+  display: block;
 }
 /*----------services-----------*/
 #services {
-    padding: 30px 0;
+  padding: 30px 0;
 }
 .services-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 40px;
-    margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 40px;
+  margin-top: 50px;
 }
 .services-list div {
-    background: #262626;
-    padding: 40px;
-    font-size: 13px;
-    font-weight: 300;
-    border-radius: 10px;
-    transition: background 0.5s, transform 0.5s;
+  background: #262626;
+  padding: 40px;
+  font-size: 13px;
+  font-weight: 300;
+  border-radius: 10px;
+  transition: background 0.5s, transform 0.5s;
 }
 .services-list div i {
-    font-size: 50px;
-    margin-bottom: 30px;
+  font-size: 50px;
+  margin-bottom: 30px;
 }
 .services-list div h2 {
-    font-size: 30px;
-    font-weight: 500;
-    margin-bottom: 15px;
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 15px;
 }
 .services-list div a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 12px;
-    margin-top: 20px;
-    display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  font-size: 12px;
+  margin-top: 20px;
+  display: inline-block;
 }
 .services-list div:hover {
-    background: #03dac5;
-    transform: translateY(-10px);
+  background: #2b8fbf;
+  transform: translateY(-10px);
 }
 /*---------portfolio-----------*/
 #portfolio {
-    padding: 50px 0;
+  padding: 50px 0;
 }
 .work-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 40px;
-    margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-gap: 40px;
+  margin-top: 50px;
 }
 .work {
-    border-radius: 10px;
-    position: relative;
-    overflow: hidden;
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
 }
 .work img {
-    width: 100%;
-    border-radius: 10px;
-    display: block;
-    transition: transform 0.5s;
+  width: 100%;
+  border-radius: 10px;
+  display: block;
+  transition: transform 0.5s;
 }
 .layer {
-    width: 100%;
-    height: 0;
-    /*background: linear-gradient(rgba(0,0,0,0.6), #03dac5);*/
-    background: rgba(0,0,0,0.3);
-    border-radius: 10px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 40px;
-    text-align: center;
-    font-size: 14px;
-    transition: height 0.5s;
+  width: 100%;
+  height: 0;
+  /*background: linear-gradient(rgba(0,0,0,0.6), #2b8fbf);*/
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  font-size: 14px;
+  transition: height 0.5s;
 }
 .layer h3 {
-    font-weight: 500;
-    margin-bottom: 20px;
+  font-weight: 500;
+  margin-bottom: 20px;
 }
 .layer a {
-    margin-top: 20px;
-    color: #03dac5;
-    text-decoration: none;
-    font-size: 18px;
-    line-height: 60px;
-    background: #fff;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    text-align: center;
+  margin-top: 20px;
+  color: #2b8fbf;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 60px;
+  background: #fff;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  text-align: center;
 }
-.work:hover img{
-    transform: scale(1.1);
+.work:hover img {
+  transform: scale(1.1);
 }
 .work:hover .layer {
-    height: 100%;
+  height: 100%;
+}
+.hide {
+  height: 0;
+  transition: height 0.5s;
+}
+.unhide {
+  height: 100%;
 }
 .btn {
-    display: block;
-    margin: 50px auto;
-    width: fit-content;
-    border: 1px solid #03dac5;
-    padding: 14px 50px;
-    border-radius:6px;
-    text-decoration: none;
-    color: #fff;
-    transition: background 0.5s;
+  display: block;
+  margin: 50px auto;
+  width: fit-content;
+  border: 1px solid #2b8fbf;
+  padding: 14px 50px;
+  border-radius: 6px;
+  text-decoration: none;
+  color: #fff;
+  transition: background 0.5s;
 }
 .btn:hover {
-    background: #03dac5;
+  background: #2b8fbf;
 }
 /*----------contact-----------*/
 .contact-left {
-    flex-basis: 35%;
+  flex-basis: 35%;
 }
 .contact-right {
-    flex-basis: 60%;
+  flex-basis: 60%;
 }
 .contact-left p {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 .contact-left p i {
-    color: #03dac5;
-    margin-right: 15px;
-    font-size: 25px;
+  color: #2b8fbf;
+  margin-right: 15px;
+  font-size: 25px;
 }
 .social-icons {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 .social-icons a {
-    text-decoration: none;
-    font-size: 30px;
-    margin-right: 15px;
-    color: #ababab;
-    display: inline-block;
-    transition: transform 0.5s;
+  text-decoration: none;
+  font-size: 30px;
+  margin-right: 15px;
+  color: #ababab;
+  display: inline-block;
+  transition: transform 0.5s;
 }
 .social-icons a:hover {
-    color: #03dac5;
-    transform: translateY(-5px);
+  color: #2b8fbf;
+  transform: translateY(-5px);
 }
 .btn.btn2 {
-    display: inline-block;
-    background: #03dac5;
+  display: inline-block;
+  background: #2b8fbf;
 }
 .contact-right form {
-    width: 100%;
+  width: 100%;
 }
-form input, form textarea {
-    width: 100%;
-    border: 0;
-    outline: none;
-    background: #262626;
-    padding: 15px;
-    margin: 15px 0;
-    color: #fff;
-    font-size: 18px;
-    border-radius: 6px;
+form input,
+form textarea {
+  width: 100%;
+  border: 0;
+  outline: none;
+  background: #262626;
+  padding: 15px;
+  margin: 15px 0;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 6px;
 }
 form .btn2 {
-    padding: 14px 60px;
-    font-size: 18px;
-    margin-top: 20px;
-    cursor: pointer;
+  padding: 14px 60px;
+  font-size: 18px;
+  margin-top: 20px;
+  cursor: pointer;
 }
 .copyright {
-    width: 100%;
-    text-align: center;
-    padding: 25px 0;
-    background: #262626;
-    font-weight: 300;
-    margin-top: 20px;
+  width: 100%;
+  text-align: center;
+  padding: 25px 0;
+  background: #262626;
+  font-weight: 300;
+  margin-top: 20px;
 }
 .copyright i {
-    color: #03dac5;
+  color: #2b8fbf;
 }
 /*----------css for small screens-----------*/
 nav .fas {
-    display: none;
+  display: none;
 }
 @media only screen and (max-width: 600px) {
-    .logo {
-        width: 10%;
-    }
-    #header {
-        background-image: url(images/phone-background.png);
-    }
-    .header-text {
-        margin-top: 80%;
-        font-size: 16px;
-    }
-    .header-text h1 {
-        font-size: 30px;
-    }
-    nav .fas {
-        display: block;
-        font-size: 25px;
-    }
-    nav ul {
-        background: rgba(0,0,0,0.8);
-        position: fixed;
-        top: 0;
-        right: -200px;
-        width: 200px;
-        height: 100vh;
-        padding-top: 50px;
-        z-index: 2;
-        transition: right 0.5s;
-    }
-    nav ul li {
-        display: block;
-        margin: 25px;
-    }
-    nav ul .fas {
-        position: absolute;
-        top: 25px;
-        left: 25px;
-        cursor: pointer;
-    }
-    .sub-title {
-        font-size: 40px;
-    }
-    .about-col-1, .about-col-2 {
-        flex-basis: 100%;
-    }
-    .about-col-1 {
-        margin-bottom: 30px;
-    }
-    .about-col-2 {
-        font-size: 14px;
-    }
-    .tab-links {
-        font-size: 16px;
-        margin-right: 20px;
-    }
-    .layer {
-        height: 100%;
-    }
-    .btn {
-        width: 100%;
-        text-align: center;
-    }
-    .contact-left, .contact-right {
-        flex-basis: 100%;
-    }
-    .btn.btn2 {
-        text-align: center;
-        width: 100%;
-    }
-    .copyright {
-        font-size: 14px;
-    }
+  .logo {
+    width: 10%;
+  }
+  #header {
+    background-image: url(images/phone-background.png);
+  }
+  .header-text {
+    margin-top: 80%;
+    font-size: 16px;
+  }
+  .header-text h1 {
+    font-size: 30px;
+  }
+  nav .fas {
+    display: block;
+    font-size: 25px;
+  }
+  nav ul {
+    background: rgba(0, 0, 0, 0.8);
+    position: fixed;
+    top: 0;
+    right: -200px;
+    width: 200px;
+    height: 100vh;
+    padding-top: 50px;
+    z-index: 2;
+    transition: right 0.5s;
+  }
+  nav ul li {
+    display: block;
+    margin: 25px;
+  }
+  nav ul .fas {
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    cursor: pointer;
+  }
+  .sub-title {
+    font-size: 40px;
+  }
+  .about-col-1,
+  .about-col-2 {
+    flex-basis: 100%;
+  }
+  .about-col-1 {
+    margin-bottom: 30px;
+  }
+  .about-col-2 {
+    font-size: 14px;
+  }
+  .tab-links {
+    font-size: 16px;
+    margin-right: 20px;
+  }
+  .layer {
+    height: 100%;
+  }
+  .btn {
+    width: 100%;
+    text-align: center;
+  }
+  .contact-left,
+  .contact-right {
+    flex-basis: 100%;
+  }
+  .btn.btn2 {
+    text-align: center;
+    width: 100%;
+  }
+  .copyright {
+    font-size: 14px;
+  }
 }
 #msg {
-    color: #61b752;
-    margin-top: -40px;
-    display: block;
+  color: #61b752;
+  margin-top: -40px;
+  display: block;
 }
+
