--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ nav ul li a:hover::after {
 .tab-contents.active-tab {
   display: block;
 }
-/*----------services-----------*/
+/*----------my skills-----------*/
 #services {
   padding: 30px 0;
 }
@@ -177,6 +177,15 @@ nav ul li a:hover::after {
 .services-list div:hover {
   background: #2b8fbf;
   transform: translateY(-10px);
+}
+#more1 {
+  display: none;
+}
+#more2 {
+  display: none;
+}
+#more3 {
+  display: none;
 }
 /*---------portfolio-----------*/
 #portfolio {
@@ -295,6 +304,9 @@ nav ul li a:hover::after {
   display: inline-block;
   background: #2b8fbf;
 }
+.btn2:hover {
+  background: #105fbf;
+}
 .contact-right form {
   width: 100%;
 }
@@ -372,6 +384,12 @@ nav .fas {
   }
   .sub-title {
     font-size: 40px;
+  }
+  .work-list {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
+  .btn {
+    background: #2b8fbf;
   }
   .about-col-1,
   .about-col-2 {
